--- a/style.css
+++ b/style.css
@@ -105,6 +105,13 @@ button {
 #result {
     display: flex;
     flex-flow: column;
+    min-height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
+
+#result > p#nodata {
+    font-size: 2rem;
 }
 
 #result > header {
@@ -285,13 +292,16 @@ button {
 }
 
 #cards {
-    order: 1
+    order: 1;
+    align-self: stretch;
 }
 
 #summary {
-    order: 2
+    order: 2;
+    align-self: stretch;
 }
 
 #query_container {
-    order: 3
+    order: 3;
+    align-self: stretch;
 }
